Fix spacing within notice on Ministerial page
The content now comes through as html, as Whitehall now parses the govspeak before saving it.

--- a/app/assets/stylesheets/views/_ministers.scss
+++ b/app/assets/stylesheets/views/_ministers.scss
@@ -1,5 +1,11 @@
-.ministers-index h2 {
-  border-bottom: 5px solid #005ea5;
+.ministers-index {
+  h2 {
+    border-bottom: 5px solid #005ea5;
+  }
+
+  .gem-c-notice p {
+    margin-top: 0;
+  }
 }
 
 .clear-column {
